--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '547d6fed-3fa1-48c0-a98b-af94dd1e350b',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
